# sudoku-solver

./: .gitignore  LICENSE  README.md  stack.yaml  sudoku-par1  sudoku-par1-threadscope  sudoku-par2  sudoku-par2-threadscope  sudoku-par3  sudoku-par3-threadscope  sudoku-par4  sudoku-par4-threadscope  sudoku-solver.cabal  sudoku1  sudoku1-threadscope  sudoku2  sudoku2-threadscope  sudoku3  sudoku3-threadscope  sudoku4  sudoku4-threadscope  sudoku5  sudoku5-threadscope
script/: post-build  rtsstats  run  watch
src/: Main.hs
