name:                 sudoku-solver
version:              0.1.0.0
synopsis:             Simple, clean project template using MIT License by default
description:          Please see README.md
homepage:             https://github.com/rcook/sudoku-solver#readme
license:              MIT
license-file:         LICENSE
author:               Richard Cook
maintainer:           rcook@rcook.org
copyright:            2016 Richard Cook
category:             Web
build-type:           Simple
cabal-version:        >= 1.10

source-repository head
  type:               git
  location:           https://github.com/rcook/sudoku-solver.git

library
  ghc-options:        -O2 -rtsopts -threaded
  default-language:   Haskell2010
  hs-source-dirs:     lib
  exposed-modules:    Sudoku
  build-depends:      array
                    , base >= 4.7 && < 5

executable sudoku1
  ghc-options:        -O2 -rtsopts -threaded
  default-language:   Haskell2010
  hs-source-dirs:     src
  main-is:            sudoku1.hs
  build-depends:      base >= 4.7 && < 5
                    , sudoku-solver

executable sudoku2
  ghc-options:        -O2 -rtsopts -threaded
  default-language:   Haskell2010
  hs-source-dirs:     src
  main-is:            sudoku2.hs
  build-depends:      base >= 4.7 && < 5
                    , deepseq
                    , parallel
                    , sudoku-solver
