name:                 sudoku-solver
version:              0.1.0.0
synopsis:             Simple, clean project template using MIT License by default
description:          Please see README.md
homepage:             https://github.com/rcook/sudoku-solver#readme
license:              MIT
license-file:         LICENSE
author:               Richard Cook
maintainer:           rcook@rcook.org
copyright:            2016 Richard Cook
category:             Web
build-type:           Simple
cabal-version:        >= 1.10

source-repository head
  type:               git
  location:           https://github.com/rcook/sudoku-solver.git

library
  default-language:   Haskell2010
  hs-source-dirs:     lib
  exposed-modules:    Sudoku
  build-depends:      array
                    , base >= 4.7 && < 5

executable sudoku1
  default-language:   Haskell2010
  hs-source-dirs:     src
  main-is:            sudoku1.hs
  build-depends:      base >= 4.7 && < 5
                    , sudoku-solver

executable sudoku2
  default-language:   Haskell2010
  hs-source-dirs:     src
  main-is:            sudoku2.hs
  build-depends:      base >= 4.7 && < 5
                    , deepseq
                    , parallel
                    , sudoku-solver

executable sudoku3
  default-language:   Haskell2010
  hs-source-dirs:     src
  main-is:            sudoku3.hs
  build-depends:      base >= 4.7 && < 5
                    , parallel
                    , sudoku-solver

executable sudoku4
  default-language:   Haskell2010
  hs-source-dirs:     src
  main-is:            sudoku4.hs
  build-depends:      base >= 4.7 && < 5
                    , parallel
                    , sudoku-solver

executable sudoku5
  default-language:   Haskell2010
  hs-source-dirs:     src
  main-is:            sudoku5.hs
  build-depends:      base >= 4.7 && < 5
                    , parallel
                    , sudoku-solver

executable sudoku-par1
  default-language:   Haskell2010
  hs-source-dirs:     src
  main-is:            sudoku-par1.hs
  build-depends:      base >= 4.7 && < 5
                    , sudoku-solver

executable sudoku-par2
  default-language:   Haskell2010
  hs-source-dirs:     src
  main-is:            sudoku-par2.hs
  build-depends:      base >= 4.7 && < 5
                    , monad-par
                    , sudoku-solver

executable sudoku-par3
  default-language:   Haskell2010
  hs-source-dirs:     src
  main-is:            sudoku-par3.hs
  build-depends:      base >= 4.7 && < 5
                    , monad-par
                    , sudoku-solver

executable sudoku-par4
  default-language:   Haskell2010
  hs-source-dirs:     src
  main-is:            sudoku-par4.hs
  build-depends:      base >= 4.7 && < 5
                    , deepseq
                    , monad-par
                    , sudoku-solver
