name:                 sudoku-solver
version:              0.1.0.0
synopsis:             Sudoku solver based on Simon Marlow's code samples
description:          Please see README.md
homepage:             https://github.com/rcook/sudoku-solver#readme
license:              BSD3
license-file:         LICENSE
author:               Richard Cook
maintainer:           rcook@rcook.org
copyright:            2016 Richard Cook
category:             Web
build-type:           Simple
cabal-version:        >= 1.10

source-repository head
  type:               git
  location:           https://github.com/rcook/sudoku-solver.git

executable dummy
  default-language:   Haskell2010
  hs-source-dirs:     src
  main-is:            Main.hs
  build-depends:      array
                    , base >= 4.7 && < 5
                    , deepseq
                    , monad-par
                    , parallel
